--- a/package.json
+++ b/package.json
@@ -8,13 +8,23 @@
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky",
-    "formate": "prettier src/ --write"
+    "formate": "prettier src/ --write",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
+    "better-auth": "^1.1.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.39.1",
+    "eslint-plugin-drizzle": "^0.2.3",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "react": "^19.0.0",
@@ -33,6 +43,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "conventional-changelog-atom": "^5.0.0",
+    "drizzle-kit": "^0.30.4",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "eslint-config-prettier": "^10.0.1",
@@ -44,6 +55,7 @@
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.3",
+    "tsx": "^4.19.2",
     "typescript": "^5"
   }
 }
