feat: implement authentication features, add login dialog and theme provider, update environment variables

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,9 @@
     "*.css": "tailwindcss"
   },
   "typescript.tsdk": "node_modules/typescript/lib",
-  "cSpell.words": ["nextjs"]
+  "cSpell.words": [
+    "nextjs",
+    "Nuqs",
+    "sonner"
+  ]
 }
