feat: update UI components and replace login dialog with button, add new YouTube icon, and clean up unused SVG files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,9 @@
   "files.associations": {
     "*.css": "tailwindcss"
   },
+  "tailwindCSS.includeLanguages": {
+    "typescriptreact": "html"
+  },
   "typescript.tsdk": "node_modules/typescript/lib",
   "cSpell.words": [
     "nextjs",
