--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "@tailwindcss/postcss": "^4.0.3",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
@@ -36,14 +37,17 @@
     "drizzle-orm": "^0.39.1",
     "eslint-plugin-drizzle": "^0.2.3",
     "lucide-react": "^0.474.0",
+    "motion": "^12.1.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "nuqs": "^2.3.2",
+    "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
@@ -51,7 +55,6 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.0.3",
     "@tanstack/eslint-plugin-query": "^5.66.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^22",
@@ -66,10 +69,8 @@
     "eslint-plugin-n": "^17.15.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
-    "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.0.3",
     "tsx": "^4.19.2",
     "typescript": "^5"
   }
