--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "better-auth": "^1.1.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.39.1",
     "lucide-react": "^0.474.0",
     "motion": "^12.1.0",
@@ -40,7 +41,11 @@
     "nuqs": "^2.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
+    "react-intersection-observer": "^9.15.1",
+    "react-lite-youtube-embed": "^2.4.0",
+    "react-player": "^2.16.0",
     "react-youtube": "^10.1.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
