--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "motion": "^12.1.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
+    "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
