feat: update .gitignore to exclude service worker files, refactor cachedAuthSession for cleaner headers handling, and improve error messaging in protectedProcedure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,6 +46,8 @@
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "public/sw.js",
+    "public/workbox-*.js"
   ]
 }
