--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+# ignore sw.js and workbox-*.js
+public/sw.js
+public/workbox-*.js
