--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "formate": "prettier src/ --write",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
