--- a/package.json
+++ b/package.json
@@ -27,15 +27,13 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toggle": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.50.0",
+    "@tanstack/react-query-devtools": "^5.66.0",
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
-    "server-only": "^0.0.1",
-    "superjson": "^2.2.1",
-    "@radix-ui/react-tooltip": "^1.1.8",
-    "@t3-oss/env-nextjs": "^0.12.0",
-    "@tanstack/react-query-devtools": "^5.66.0",
     "@types/he": "^1.2.3",
     "better-auth": "^1.1.16",
     "class-variance-authority": "^0.7.1",
@@ -50,6 +48,7 @@
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.3.2",
+    "ogl": "^1.0.11",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -60,7 +59,9 @@
     "react-player": "^2.16.0",
     "react-youtube": "^10.1.0",
     "remove": "^0.1.5",
+    "server-only": "^0.0.1",
     "sonner": "^1.7.4",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1",
