feat: added meta tags

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "PlaylistsGenius",
-  "short_name": "PlaylistsGenius",
+  "name": "Simplify",
+  "short_name": "Simplify",
   "description": "Transform YouTube content into structured courses. Create and share educational content from YouTube videos.",
   "icons": [
     {
