--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
     "@types/he": "^1.2.3",
+    "babel-plugin-react-compiler": "^19.0.0-beta-bafa41b-20250307",
     "better-auth": "^1.1.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
