--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/eslint-plugin-query": "^5.66.0",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-bafa41b-20250307",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^22",
     "@types/react": "^19",
